kubernetes/keycloak/istio-gateway-tls.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - ${KEYCLOAK_HOSTNAME}
    port:
      name: http2
      number: 8080
      protocol: HTTP2
    tls:
      httpsRedirect: true
  - hosts:
    - "${KEYCLOAK_HOSTNAME}"
    port:
      name: https
      number: 8443
      protocol: HTTPS
    tls:
      credentialName: tls-keycloak-ingress
      mode: SIMPLE
