kubernetes/keycloak/istio-gateway.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - ${KEYCLOAK_HOSTNAME}
    port:
      name: http2
      number: 8080
      protocol: HTTP2
