kubernetes/keycloak/istio-virtualservice.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: keycloak
spec:
  selector:
    istio-keycloak: ingressgateway
  servers:
  - hosts:
    - ${KEYCLOAK_HOSTNAME}
    port:
      name: http2-redirect-https
      number: 8081
      protocol: HTTP2
    tls:
      httpsRedirect: true
  - hosts:
    - ${KEYCLOAK_HOSTNAME}
    port:
      name: http2
      number: 8080
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
spec:
  gateways:
  - keycloak
  hosts:
  - ${KEYCLOAK_HOSTNAME}
  http:
  - route:
    - destination:
        host: keycloak
        port:
          number: 80
    headers:
      request:
        set:
          x-forwarded-proto: https
